--- a/OrderProcessing_Complete/Views/Verbs/Details.cshtml
+++ b/OrderProcessing_Complete/Views/Verbs/Details.cshtml
@@ -4,10 +4,10 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
+<h2>Details: Customer Record</h2>
 
 <div>
-    <h4>orderClass</h4>
+    @*<h4>orderClass</h4>*@
     <hr />
     <dl class="dl-horizontal">
         <dt>
